license notices and Makefile rules for tex4ht-xhtmml-xtpipes.tex
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@9 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/Makefile
+++ b/lit/Makefile
@@ -1,10 +1,19 @@
 # $Id$
-# Public domain.  Originally written 2010, Karl Berry.
+# This file is public domain.  Originally written 2010, Karl Berry.
 
 wd = work.dir
 
+common = tex4ht-cpright.tex common.tex
+derived =
+
+derived += $(tex4ht_xhtmml_xtpipes_derived)
+tex4ht_xhtmml_xtpipes_derived = \
+  xhtmml.4xt \
+  XhtmmlUtilities.java \
+
 # wripro.tex generates nothing (not literate).
 
+derived += $(xtpipes_derived)
 xtpipes_derived = \
   $(wd)/xtpipes.java \
   $(wd)/xtpipes/FileInfo.java \
@@ -18,19 +27,29 @@ xtpipes_derived = \
   xtpipes-map.dtd \
   xtpipes.dtd \
 
-$(xtpipes_derived): xtpipes.tex tex4ht-cpright.tex common.tex
-	htlatex xtpipes "xhtml,3,next" "" "-d./" "-interaction=nonstopmode"
+default all: $(derived)
+
+$(tex4ht_xhtmml_xtpipes_derived): tex4ht-xhtmml-xtpipes.tex $(common)
+	htlatex $< "xhtml,3,next" "" "-d./" "-interaction=nonstopmode"
+
+$(xtpipes_derived): xtpipes.tex $(common)
+	htlatex $< "xhtml,3,next" "" "-d./" "-interaction=nonstopmode"
 # Derived files are generated in . and $(wd).
 # (corresponds to src/java for xtpipes.tex)
 
 destdir = ..
 update:
+	$(update) XhtmmlUtilities.java $(destdir)/src/java/
+	$(update) xhtmml.4xt $(destdir)/texmf/tex4ht/xtpipes/
 	rmdir $(wd)/bin
-	$(update) -r $(wd)/* $(destdir)/src/java/
-	$(update) -r xtpipes.dtd xtpipes-map.dtd xtpipes-default.4xt \
+	$(update) $(wd)/* $(destdir)/src/java/
+	$(update) xtpipes.dtd xtpipes-map.dtd xtpipes-default.4xt \
 	  $(destdir)/texmf/tex4ht/xtpipes/
 
-clean:
+clean: mostlyclean
 	rm -rf $(wd)
 	rm -f *.4ct *.4tc *.aux *.css *.dvi *.idv *.lg *.log *.tmp *.trc *.xref
-	rm -f xtpipes*html $(xtpipes_derived)
+	rm -f *.html
+
+mostlyclean:
+	rm -f $(derived)
