tex4ht-html-speech-xtpipes: license notices
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@36 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/.svnignore
+++ b/lit/.svnignore
@@ -1,14 +1,22 @@
 work.dir
 *.4ct
+*.4ht
 *.4tc
+*.4xt
 *.aux
+*.bat
+*.c
 *.css
+*.dtd
 *.dvi
 *.html
 *.idv
+*.java
 *.lg
 *.log
+*.perl
 *.png
 *.tmp
 *.trc
+*.unix
 *.xref
