conditionalize topmatter to make all blog articles into chapters
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@115 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,23 +1,29 @@
 # $Id$
 # This file is public domain.  Originally written 2010, Karl Berry.
 
-texi2pdf = texi2pdf
+pdflatex = pdflatex -interaction=nonstopmode -file-line-error
+
+tex4ht.pdf: tex4ht.tex cvrblog.sty *.tex
+	$(pdflatex) $<
+
+# texinfo attempt.
+#texi2pdf = texi2pdf
+##
+#makeinfo = makeinfo
+#texi2html = $(makeinfo) --html --no-split
+#texi2info = $(makeinfo) --no-split
+#texi2txt = $(makeinfo) --plaintext --no-split -o $@
 #
-makeinfo = makeinfo
-texi2html = $(makeinfo) --html --no-split
-texi2info = $(makeinfo) --no-split
-texi2txt = $(makeinfo) --plaintext --no-split -o $@
-
-all: tex4ht.info tex4ht.pdf tex4ht.html tex4ht.txt
-
-tex4ht.html: tex4ht.texi
-	$(texi2html) $<
-
-tex4ht.info: tex4ht.texi
-	$(texi2info) $<
-
-tex4ht.pdf: tex4ht.texi
-	$(texi2pdf) $<
-
-tex4ht.txt: tex4ht.texi
-	$(texi2txt) $<
+#all: tex4ht.info tex4ht.pdf tex4ht.html tex4ht.txt
+#
+#tex4ht.html: tex4ht.texi
+#	$(texi2html) $<
+#
+#tex4ht.info: tex4ht.texi
+#	$(texi2info) $<
+#
+#tex4ht.pdf: tex4ht.texi
+#	$(texi2pdf) $<
+#
+#tex4ht.txt: tex4ht.texi
+#	$(texi2txt) $<
