test for latex using \documentclass, https://puszcza.gnu.org.ua/bugs/?245
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@145 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/Makefile
+++ b/lit/Makefile
@@ -17,6 +17,7 @@ derived += $(tex4ht_4ht_derived)
 tex4ht_4ht_derived = \
   book.4ht listings.4ht multicol.4ht quoting.4ht \
   scrartcl.4ht scrbook.4ht scrreprt.4ht \
+  spanish.4ht \
   titlesec.4ht tocloft.4ht
 # and many, many more.
 
