many *.htf aliases from Michal, per http://tug.org/pipermail/tex4ht/2015q2/001180.html
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@150 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/Makefile
+++ b/lit/Makefile
@@ -49,6 +49,8 @@ derived += $(tex4ht_fonts_noncjk_derived)
 tex4ht_fonts_noncjk_derived = \
   tex4ht.dir/texmf/tex4ht/ht-fonts/alias/ec/eccc.htf \
   tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/ec/eccc-uni.htf \
+  tex4ht.dir/texmf/tex4ht/ht-fonts/alias/t1fonts/ClearSans-BoldItalic-lf-t1.htf \
+  tex4ht.dir/texmf/tex4ht/ht-fonts/alias/t1fonts/ipxg-r-t1.htf \
   SearchFonts.java lm-htf.tex
 # and lots more
 # whither tmp?  how change target dir?  what happened to cmtex.htf?  etc.
