return NULL rather than FALSE for FILE*, https://sourceforge.net/p/miktex/bugs/2488
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@166 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/Makefile
+++ b/lit/Makefile
@@ -16,7 +16,7 @@ derived =
 derived += $(tex4ht_4ht_derived)
 tex4ht_4ht_derived = \
   biblatex.4ht book.4ht frenchb.4ht graphicx.4ht hyperref.4ht listings.4ht \
-  memoir.4ht multicol.4ht quoting.4ht \
+  memoir.4ht multicol.4ht quoting.4ht reading.4ht \
   scrartcl.4ht scrbook.4ht scrreprt.4ht spanish.4ht subscript.4ht \
   titlesec.4ht tocloft.4ht wrapfig.4ht 
 # and many, many more.
