enable #line directives for .c output and main *.4ht (from deimi), http://puszcza.gnu.org.ua/bugs/?136
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@185 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/Makefile
+++ b/lit/Makefile
@@ -9,7 +9,7 @@ tex_1opt = "$(tex_opts)"
 
 default: all
 
-common = tex4ht-cpright.tex common.tex common-code.tex #ProTex.sty AlProTex.sty
+common = tex4ht-cpright.tex common.tex common-code.tex ProTex.sty AlProTex.sty
 common_info = $(common) common-info.tex
 derived = 
 
