Added fontspec fo mktex4ht-cnf.tex
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@206 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/Makefile
+++ b/lit/Makefile
@@ -221,7 +221,7 @@ $(tex4ht_bibtex2_derived): tex4ht-bibtex2.tex $(common)
 $(tex4ht_c_derived): tex4ht-c.tex $(common)
 	tex $(tex_opts) $<
 
-$(tex4ht_cond4ht_derived): tex4ht-cond4ht.tex $(common)
+$(tex4ht_cond4ht_derived): tex4ht-cond4ht.tex mktex4ht-cnf.tex $(common)
 	tex $(tex_opts) $<
 	tex $(tex_opts) cond4ht.4ht
 
