Moved luatex definitions to fontspec-luatex.4ht
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@210 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/Makefile
+++ b/lit/Makefile
@@ -36,7 +36,7 @@ tex4ht_4ht_derived = \
   memoir.4ht multicol.4ht multirow.4ht quoting.4ht reading.4ht \
   scrartcl.4ht scrbook.4ht scrreprt.4ht spanish.4ht subscript.4ht \
   titlesec.4ht tocloft.4ht wrapfig.4ht usepackage.4ht fontspec.4ht \
-	fontspec-xetex.4ht fontspec-4ht.lua
+	fontspec-xetex.4ht fontspec-4ht.lua fontspec-luatex.4ht
 # xx and many, many more.
 
 derived += $(tex4ht_bibtex2_derived)
