Change in rm-lm fonts
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@216 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/Makefile
+++ b/lit/Makefile
@@ -76,7 +76,9 @@ tex4ht_fonts_noncjk_derived = \
   SearchFonts.java lm-htf.tex
 tex4ht_fonts_modern_derived = \
   tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/lm/l7x-lmcsc.htf \
-  tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/lm/l7x-lm.htf  
+  tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/lm/l7x-lm.htf \
+  tex4ht.dir/texmf/tex4ht/ht-fonts/alias/lm/rm-lmt.htf \
+  tex4ht.dir/texmf/tex4ht/ht-fonts/alias/lm/rm-lmvt.htf
 # xx and lots more
 # whither tmp?  how change target dir?  what happened to cmtex.htf?  etc.
 
